<resources>
    <string name="app_name">RelativeLayoutMaterial</string>
    <string name="txtMonument">Catedral</string>
    <string name="txtDateVisit">Fecha visita</string>
    <string name="txtTypeVisit">Tipo entrada</string>
    <string name="btnReserve">Reservar</string>
    <string name="btnBuy">Comprar</string>
    <string name="contentImgCity">Catedral de Málaga</string>
    <string name="contentImgFavorites">Favoritos</string>
</resources>
