<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.relativelayoutmaterial.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <!--Ponemos margen por debajo a la imagen de arriba y que se alinee la parte de abajo de la imagen con la parte de abajo de la
    estrella. El margen es para ajustar la estrella en medio-->

    <ImageView
        android:id="@+id/imgCity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/contentImgCity"
        android:scaleType="centerCrop"
        android:layout_marginBottom="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/malaga"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintBottom_toBottomOf="@+id/imgFavorite"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imgFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/contentImgFavorites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"
        app:srcCompat="@android:drawable/btn_star" />

    <TextView
        android:id="@+id/txtMonument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtMonument"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCity" />

    <TextView
        android:id="@+id/txtDateVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDateVisit"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtMonument"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtMonument" />

    <EditText
        android:id="@+id/edtDateVisit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtDateVisit"
        app:layout_constraintLeft_toRightOf="@+id/txtDateVisit" />

    <TextView
        android:id="@+id/txtTypeVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txtTypeVisit"
        app:layout_constraintTop_toBottomOf="@+id/txtDateVisit"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/txtDateVisit" />

    <EditText
        android:id="@+id/edtTypeVisit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTypeVisit"
        app:layout_constraintLeft_toLeftOf="@+id/edtDateVisit" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBuy"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnReserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnReserve"
        app:layout_constraintRight_toLeftOf="@+id/btnBuy"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>
